--- a/spring-boot-app/src/main/resources/application.properties
+++ b/spring-boot-app/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 server.error.include-message=always
 
 spring.task.scheduling.pool.size=5
+
+
+spring.datasource.url=jdbc:mysql://localhost/test?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database=MYSQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
